# tuiro

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tuiro/: __init__.py  __main__.py  colors.py  palette.py  spinner.py  tuiro.py
