[project]
name = "tuiro"
version = "0.1.1"
description = "Tiny terminal UI utility for clean, colorful build output."
readme = "README.md"
authors = [
    { name = "NellowTCS", email = "nellowtcs@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

keywords = ["terminal", "tui", "ansi", "cli", "colors", "logging", "build-tools", "spinner"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Terminals",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/NellowTCS/tuiro"
Repository = "https://github.com/NellowTCS/tuiro"
Issues = "https://github.com/NellowTCS/tuiro/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuiro"]

[project.scripts]
tuiro = "tuiro.__main__:main"
